# life

./: README.md  gol.spec.ts  package-lock.json  package.json  start.txt  tsconfig.json
js/: gen.ts  gol.ts  package-lock.json  package.json
js/src/: cell.spec.ts  cell.ts  game.spec.ts  game.ts  main.spec.ts  main.ts
patterns/: gosper-glider.txt  growth.txt  hotcrystal.txt  p76-pi-heptomino-hassler.txt  puffer-ship.txt  r-pentino.txt  r-pentomino.txt  random.txt  spider.txt  start-simple.txt  traffic-stop.txt  wave.txt
rust/: Cargo.toml
rust/benches/: state.rs
rust/src/: lib.rs  main.rs
rust/src/app/: cli.rs  mod.rs  pattern.rs  state.rs  tui.rs
rust/src/app/pattern/: data.rs  list.rs  mod.rs  pattern.rs
rust/src/app/patterns/: data.rs  list.rs
rust/src/tests/: state.rs
rust/src/ui/: game.rs  help.rs  menu.rs  mod.rs  quit.rs  select.rs  spark.rs  stats.rs
rust/tests/: state.rs
src/: cell.spec.ts  cell.ts  game.spec.ts  game.ts  main.spec.ts  main.ts
