[package]
name = "gol"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bin]]
name = "gol"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
criterion = "0.5.1"
crossterm = "0.27.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }

[[bench]]
name = "state"
harness = false
